Updated response classes for advice on records, refactored services, created advice for the Post entity, and improved error handling.